Fix filtered chat feedback, patch CotS quest data, add thieving modes
Three player-reported fixes:

- Chat feedback invisible on standard clients: raw GAMEMESSAGEs from
  Client.addChatMessage are hidden when the Game chat tab is set to
  "Filter" (dev testing had it unfiltered). Blocked-action feedback now
  goes through ChatMessageManager as CONSOLE messages, which the filter
  leaves alone.
- Children of the Sun showed "no card requirements" but its guard-
  marking step is an item-on-NPC interaction blocked while the Guard
  card is locked. Patched into quest_cards.json with an explanatory
  note; the walkthrough-prose blind spot is documented in the quest
  report addendum and a systematic mining pass is on the backlog -
  until then such reports get patched case-by-case.
- Thieving toggle becomes a mode dropdown: Off / Coins + Pouch
  (previous behaviour, default) / NPC + Loot (additionally requires the
  target's own card - Man card to pickpocket a Man). Implemented as
  role "npc" groups on the 9 pickpocket rules whose targets have cards;
  the named elves have none and correctly gain no NPC requirement.
  Migration note: the old restrictPickpocketing boolean key is
  replaced by thievingMode - players who had disabled it return to the
  default.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>